[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/mouseover.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SelectableArea.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.98668, 4.98668 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("x_o:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "blink"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("x_o:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="POS" type="Area2D"]
scale = Vector2( 17.647, 17.647 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="mouse_over" type="Sprite" parent="."]
position = Vector2( -5.66244e-07, -5.66244e-07 )
scale = Vector2( 1.24667, 1.24667 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource( 1 )

[node name="x_o" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="x_o"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/blink = SubResource( 3 )

[connection signal="input_event" from="." to="." method="_on_POS_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_POS_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_POS_mouse_exited"]
